<resources>
    <string name="app_name">Realm Demo</string>
    <string name="hint_pick_contact">Pick a Contact</string>
    <string name="pick">Pick</string>
    <string name="amount">Amount</string>
    <string name="commit">Commit</string>
    <string name="viewTransactions">View Transactions</string>
    <string name="freq_string">Frequents</string>
    <string name="all_transactions">All transactions</string>
    <string name="reason">For what?</string>
    <string name="menu_item_share">Share</string>


    <array name="transactionArray">
        <item>Give to them</item>
        <item>Take from them</item>
    </array>

    <array name="whichViewArray">
        <item>View All</item>
        <item>Specific Person</item>
    </array>
</resources>
